--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ version: 4.0.0
 # Icarus theme variant, can be "default" or "cyberpunk"
 variant: default
 # Path or URL to the website's logo
-logo: https://cdn.jsdelivr.net/gh/removeif/removeif-demo@latest/img/logo.png #/img/logo.svg
+logo: /img/minz_logo3.png
+# https://cdn.jsdelivr.net/gh/removeif/removeif-demo@latest/img/logo.png #/img/logo.svg
 # Page metadata configurations
 head:
     # URL or path to the website's icon
@@ -13,7 +14,7 @@ head:
     open_graph:
         # Page title (og:title) (optional)
         # You should leave this blank for most of the time
-        title: 辣椒の酱
+        title: minz VV
         # Page type (og:type) (optional)
         # You should leave this blank for most of the time
         type: blog
@@ -25,7 +26,7 @@ head:
         image: https://cdn.jsdelivr.net/gh/removeif/removeif-demo@latest/img/avatar.png
         # Site name (og:site_name) (optional)
         # You should leave this blank for most of the time
-        site_name: 辣椒の酱
+        site_name: minz VV
         # Page author (article:author) (optional)
         # You should leave this blank for most of the time
         author: removeif
@@ -70,28 +71,32 @@ head:
     # URL or path to the website's RSS atom.xml
     rss: 
 # Page top navigation bar configurations
+
+# 菜单栏设置
 navbar:
     # Naviagtion menu items
     menu:
-        Home: /
-        Archives: /archives
-        Categories: /categories
-        Tags: /tags
-        About: /about
-        Album: /album
-        Friend: /friend
-        Message: /message
-        Self-talking: /self-talking
-        Music: /music
-        Media: /media
+        主页: /
+        归档: /archives
+        分类: /categories
+        标签: /tags
+        留言: /message
+        碎碎念: /self-talking
+        关于我: /about
+        #相册: /album
+        #友链: /friend
+        #音乐: /music
+        #Media: /media
     # Links to be shown on the right of the navigation bar
     links:
-        Join Gitter:
-            icon: fab fa-gitter
-            url: 'https://gitter.im/hexo-theme-amazing/community'
+        #Join Gitter:
+        #    icon: fab fa-gitter
+        #    url: 'https://gitter.im/hexo-theme-amazing/community'
         Download on GitHub:
             icon: fab fa-github
             url: 'https://github.com/removeif/hexo-theme-amazing'
+
+# 页脚右侧小图标
 # Page footer configurations
 footer:
     # Links to be shown on the right of the footer section
@@ -141,17 +146,19 @@ search:
 #    shortname: ''
 # Comment plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Comment/
+
+#gitalk文章评论
 comment:
     type: gitalk
     language: zh-CN #zh-CN #Localization language key, en, zh-CN and zh-TW are currently available.
     owner: removeif         # (required) GitHub user name
     repo: blog_comment          # (required) GitHub repository name
-    client_id: 46a9f3481b46ea0129d8     # (required) OAuth application client id
-    client_secret: 79c7c9cb847e141757d7864453bcbf89f0655b24 # (required) OAuth application client secret
-    admin: ['removeif']
+    client_id: #46a9f3481b46ea0129d8     # (required) OAuth application client id
+    client_secret: #79c7c9cb847e141757d7864453bcbf89f0655b24 # (required) OAuth application client secret
+    admin: #['removeif']
     create_issue_manually: true
     distraction_free_mode: false
-    has_hot_recommend: true # 是否有热门推荐
+    has_hot_recommend: false # 是否有热门推荐
     has_latest_comment: true #是否有最新评论
     proxy: https://cors-anywhere.azm.workers.dev/https://github.com/login/oauth/access_token #解决登录后403问题
 # comment:
@@ -246,11 +253,11 @@ widgets:
         position: left
         type: profile
         # Author name
-        author: 辣椒の酱
+        author: minzVV
         # Author title
-        author_title: 尚未执佩剑，转眼即江湖
+        author_title: 但行好事，莫问前程
         # Author's current location
-        location: 阿尔及利亚
+        location: 中国广东
         # URL or path to the avatar image
         avatar: https://cdn.jsdelivr.net/gh/removeif/removeif-demo@latest/img/avatar.png
         # Whether show the rounded avatar image
@@ -280,7 +287,7 @@ widgets:
     # Recommendation links widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
-        position: left
+        position: right
         type: links
         # Names and URLs of the sites
         links:
@@ -329,7 +336,7 @@ widgets:
 # AdSense client ID
 adsense_client_id: #'ca-pub-6343805421927634'
 # AdSense AD unit ID
-adsense_slot_id: '5134765588'
+adsense_slot_id: #'5134765588'
 # article head ad
 article_head_has_ad: true
 # comment head ad
@@ -396,9 +403,9 @@ providers:
 
 
 footer_copyright_dsec: © 版权说明：[本网站所有内容均收集于互联网或自己创作,<br />&nbsp;&nbsp;&nbsp;&nbsp;方便于网友与自己学习交流，如有侵权，请<a href="/message" target="_blank">留言</a>，立即处理]<br /> #footer 版权说明 可自由配置
-website_start_time: 2018/11/11 00:00:00 #网站运行开始时间,不填不显示
+website_start_time: 2021/03/15 00:00:00 #网站运行开始时间,不填不显示
 footer_registered_no: 川ICP备88888888号-8（测试） #备案号
-side_music_netease_id: 2364053447 #侧边栏网易云歌单id
+side_music_netease_id: #2364053447 #侧边栏网易云歌单id
 busuanzi_only_count: false #当上面plugins中busuanzi: true时，此配置busuanzi_only_count为true时，网站不显示不蒜子统计数据，但是会每次统计。false时显示统计数据。
-has_live_2D_switch: true #live2D开关 true-开 false-关
+has_live_2D_switch: false #live2D开关 true-开 false-关
 use_pjax: true #是否pjax
