change amazing theme configuration

--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ navbar:
         #    url: 'https://gitter.im/hexo-theme-amazing/community'
         Download on GitHub:
             icon: fab fa-github
-            url: 'https://github.com/minzVV/hexo-theme-amazing'
+            url: 'https://github.com/minzVV/blog'
 
 # 页脚右侧小图标
 # Page footer configurations
