--- a/_config.yml
+++ b/_config.yml
@@ -88,13 +88,13 @@ navbar:
         #音乐: /music
         #Media: /media
     # Links to be shown on the right of the navigation bar
-    links:
+    #links:
         #Join Gitter:
         #    icon: fab fa-gitter
         #    url: 'https://gitter.im/hexo-theme-amazing/community'
-        Download on GitHub:
-            icon: fab fa-github
-            url: 'https://github.com/minzVV/blog'
+        #Download on GitHub:
+        #    icon: fab fa-github
+        #    url: 'https://github.com/minzVV/blog'
 
 # 页脚右侧小图标
 # Page footer configurations
@@ -151,11 +151,11 @@ search:
 comment:
     type: gitalk
     language: zh-CN #zh-CN #Localization language key, en, zh-CN and zh-TW are currently available.
-    owner: removeif         # (required) GitHub user name
+    owner: minzVV         # (required) GitHub user name
     repo: blog_comment          # (required) GitHub repository name
-    client_id: #46a9f3481b46ea0129d8     # (required) OAuth application client id
-    client_secret: #79c7c9cb847e141757d7864453bcbf89f0655b24 # (required) OAuth application client secret
-    admin: #['removeif']
+    client_id: 475adee66f81ffbd3dc5     # (required) OAuth application client id
+    client_secret: 9231bbbd4b221c6b2271ce8c57c4f3638b8006 # (required) OAuth application client secret
+    admin: minzVV
     create_issue_manually: true
     distraction_free_mode: false
     has_hot_recommend: false # 是否有热门推荐
