--- a/_config.yml
+++ b/_config.yml
@@ -81,10 +81,10 @@ navbar:
         分类: /categories
         标签: /tags
         留言: /message
+        友链: /friend
         #碎碎念: /self-talking
         关于我: /about
         #相册: /album
-        #友链: /friend
         #音乐: /music
         #Media: /media
     # Links to be shown on the right of the navigation bar
